--- a/gui/PredictionWindow.ui
+++ b/gui/PredictionWindow.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1280</width>
-    <height>720</height>
+    <width>978</width>
+    <height>558</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>1280</width>
-    <height>720</height>
+    <width>960</width>
+    <height>540</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>1280</width>
-    <height>720</height>
+    <width>978</width>
+    <height>558</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -27,16 +27,7 @@
   </property>
   <property name="styleSheet">
    <string notr="true">QWidget {
-    background: qlineargradient(
-        spread:pad,
-        x1:0, y1:0,
-        x2:1, y2:1,
-        stop:0 #1c192b,
-        stop:0.2 #434262,
-        stop:0.4 #25223c,
-        stop:0.6 #363353,
-        stop:1 #151321
-    );
+    background-color: #1a1328;;
 }</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
@@ -57,8 +48,6 @@
      <property name="styleSheet">
       <string notr="true">QFrame#mainCard {
 background-color: #1a1328;
-	border: 2px solid#26183d;
-	border-radius: 20px;
 }
 </string>
      </property>
